@@ -3,6 +3,8 @@ Changelog
 
 1.39-dev - (unreleased)
 -----------------------
+ * Bug fix: commented under IndicatorFactSheet content type the usage of
+     "unique_specification_code" validator as it is not defined [ghicaale #4174]
 
 1.38 - (2011-02-24)
 -------------------
